apps/tinyauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyauth-dp
  namespace: tinyauth
  labels:
    app: tinyauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
    spec:
      serviceAccountName: tinyauth-sa
      containers:
        - name: tinyauth
          image: ghcr.io/tinyauthapp/tinyauth:v5.2.0
          ports:
            - containerPort: 3000
              name: web
          volumeMounts:
            - name: tinyauth-data
              mountPath: /data
      volumes:
        - name: tinyauth-data
          hostPath:
            path: /mnt/ssd/app-data/tinyauth/data
            type: DirectoryOrCreate
